WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207903
NetworkDataTask should not expect its session wrapper to be always live
https://bugs.webkit.org/show_bug.cgi?id=207903
Summary
NetworkDataTask should not expect its session wrapper to be always live
youenn fablet
Reported
2020-02-18 12:51:12 PST
NetworkDataTask should not expect its session wrapper to be always live
Attachments
Patch
(5.32 KB, patch)
2020-02-18 12:55 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.41 KB, patch)
2020-02-18 14:10 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-02-18 12:52:56 PST
<
rdar://problem/59291486
>
Radar WebKit Bug Importer
Comment 2
2020-02-18 12:53:15 PST
<
rdar://problem/59561689
>
youenn fablet
Comment 3
2020-02-18 12:53:46 PST
<
rdar://problem/59291486
>
youenn fablet
Comment 4
2020-02-18 12:55:47 PST
Created
attachment 391079
[details]
Patch
youenn fablet
Comment 5
2020-02-18 14:04:44 PST
Comment on
attachment 391079
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391079&action=review
> Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.h:93 > + WeakPtr<SessionWrapper> m_sessionWrapper;
I think the WeakPtr is necessary in case of SessionWrapper being an isolated session, which can be removed or cleared at various points in time.
Alex Christensen
Comment 6
2020-02-18 14:07:45 PST
Comment on
attachment 391079
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391079&action=review
> Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:321 > if (!m_task || !m_session)
Let's just replace m_session with m_sessionWrapper, which is the only one used in this function.
youenn fablet
Comment 7
2020-02-18 14:10:56 PST
Created
attachment 391088
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2020-02-18 15:09:05 PST
Comment on
attachment 391088
[details]
Patch for landing Clearing flags on attachment: 391088 Committed
r256857
: <
https://trac.webkit.org/changeset/256857
>
WebKit Commit Bot
Comment 9
2020-02-18 15:09:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug